--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <section id="upload-form-wrapper">
         <form action="choose" method="POST" id="upload-form" enctype="multipart/form-data" onsubmit='return check();'>
             <h3>새로운 시나리오를 등록해보세요.</h3>
-            <input type="file" id="uploadFile" name="fileName" accept=".docx, .doc, .pdf, .hwp" onchange="fileSelect()">
+            <input type="file" id="uploadFile" name="fileName" accept=".docx, .pdf, .hwp" onchange="fileSelect()">
             <label for="uploadFile">
                 <figure class="upload-btn"><img src="../images/upload-ic.svg"/></figure>
                 <p id="select-file-name"></p>
